--- a/rheakhannacapstone/index.html
+++ b/rheakhannacapstone/index.html
@@ -25,6 +25,17 @@ The ocean is the largest habitat on Earth and it is largely unknown. More people
 
 </div>
 
+	<div class="mobilewrapper">
+
+	 <p class="mobiletitleinfo"> 
+
+The ocean is the largest habitat on Earth and it is largely unknown.
+
+</p>
+
+  <p class="mobilebegin"> <a href="main.html"> Explore </a></p>
+
+</div>
 
 
 
