--- a/rheakhannacapstone/main.html
+++ b/rheakhannacapstone/main.html
@@ -245,6 +245,15 @@
                   <div id="bubbles-medium"></div>
                   <div id="bubbles-small"></div>
 
+                   <div class="greenfillertwo"> </div>
+                   <div class="bloodtwo" style="height:110%;">
+
+                    <div class="redfillertwo"> </div>
+                    <video autoplay muted loop style="height:100%">
+                       <source src="cells.mov" type="video/mp4">
+                  </video>
+                </div>
+
         </div>
 
       </div>
@@ -631,7 +640,7 @@
               <div class="information" id="header"> Midnight Zone </div>
               <hr class="dash" />
               <div class="information" id="headertwo"> 1,000-4,000m </div>
-              <div class="information" id="subheading"> Where light stops penetrating and all animals are predators or scavengers. </div>
+              <div class="information" id="subheading"> Where light stops penetrating and all animals are predators. </div>
          <!--      <div class="information" id="headerthree"> What stories lie at this depth? </div> -->
               <div class="midstart">Explore</div>
 
@@ -670,7 +679,7 @@
                <div class="information" id="headerinfo"> The Colossal Squid vs The Sperm Whale</div>
                 <hr class="dash" />
                 <div class="information" id="headertwo"> at 2197m-2500m </div>
-                <div class="information" id="headerinfotwo"> These giant squids are 10m long and weight 1,091lbs! They have the biggest eyes of any animal. They are known to fight with Sperm Whales, who reach this depth by collapsing their ribs and lungs to account for the high water pressure. </div>
+                <div class="information" id="headerinfotwo"> These giant squids are 10m long and weight 1,091lbs! They have the biggest eyes of any animal. They are known to fight with Sperm Whales, who reach this depth by collapsing their ribs and lungs. </div>
 
               </div>
 
@@ -687,6 +696,11 @@
       <div class="row" id="rowpagefiller">
 
         <div class="col-md-12" id="fillerseventeen">
+          <div class="oil" style="height:110%;">
+                    <video autoplay muted loop controls style="height:100%">
+                       <source src="oil.mp4" type="video/mp4">
+                  </video>
+                </div>
 
                   <div id="bubbles-big"></div>
                   <div id="bubbles-medium"></div>
@@ -956,7 +970,7 @@
               <div class="information" id="header"> Abyssal Zone </div>
               <hr class="dash" />
               <div class="information" id="headertwo"> 4,000-6,000m </div>
-              <div class="information" id="subheading"> The largest minimally explored zone of the ocean. <br>Use the flashlight to explore.</div>
+              <div class="information" id="subheading">Use the flashlight to explore.</div>
          <!--      <div class="information" id="headerthree"> What stories lie at this depth? </div> -->
               <div class="abstart">Explore</div>
 
@@ -1017,6 +1031,8 @@
                   <div id="bubbles-big"></div>
                   <div id="bubbles-medium"></div>
                   <div id="bubbles-small"></div>
+
+                  <div class="overlay"></div>
 
         </div>
 
@@ -1177,12 +1193,15 @@
     <div class="container" id="fortytwofiller">
       
       <div class="row" id="rowpagefiller">
+        <div class="hadoverlay"></div>
 
         <div class="col-md-12" id="fillerfortytwo">
+
 
                   <div id="bubbles-big"></div>
                   <div id="bubbles-medium"></div>
                   <div id="bubbles-small"></div>
+
 
         </div>
 
